counter/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: rakhicc/ping-pong:v11
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
              port: 3007
            initialDelaySeconds: 5
            periodSeconds: 5
