counter/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: pingpong
  namespace: exercises
spec:
  replicas: 1

  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: pingpong

  template:
    metadata:
      labels:
        app: pingpong

    spec:
      containers:
        - name: pingpong

          image: rakhicc/ping-pong:v15
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

  strategy:
    canary:
      steps:
        - setWeight: 50

        - analysis:
            templates:
              - templateName: pingpong-cpu-analysis

        - setWeight: 100
