counter/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  type: NodePort
  selector:
    app: ping-pong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3007
